# omnishuffle

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
omnishuffle/: __init__.py  config.py  main.py  player.py  scrobbler.py
omnishuffle/sources/: __init__.py  base.py  pandora.py  spotify.py  youtube.py
